--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,13 @@
 {% extends "base.html" %}
-{% block meta %}
-<meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-{% endblock %}
 {% block title %} Рецепты {% endblock %}
 {% load static %}
 {% block link %}
     <link rel="stylesheet" href="{% static 'css/pages/index.css' %}">
 {% endblock %}
 {% block content %}
+{% block nav %}
+    {% include 'includes/nav.html' with index=True %}
+{% endblock %}
 <main class="main container">
     <div class="main__header">
         <h1 class="main__title">Рецепты</h1>
