--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -2,10 +2,18 @@
     <div class="nav__container container">
         <ul class="nav__items list">
             <li class="nav__item {% if index %}nav__item_active{% endif %}"><a href="{% url 'index' %}" class="nav__link link">Рецепты</a></li>
-
+            {% if user.is_authenticated %}
+{#            <li class="nav__item {% if follow %}nav__item_active{% endif %}"><a href="{% url 'follow' %}" class="nav__link link">Мои подписки</a></li>#}
+{#            <li class="nav__item {% if add_recipe %}nav__item_active{% endif %}"><a href="{% url 'add_recipe' %}" class="nav__link link">Создать рецепт</a></li>#}
+{#            <li class="nav__item {% if favourite %}nav__item_active{% endif %}"><a href="{% url 'favourite' %}" class="nav__link link">Избранное</a></li>#}
+{#            <li class="nav__item {% if purchase %}nav__item_active{% endif %}"><a href="{% url 'purchase' %}" class="nav__link link">Список покупок <span class="badge badge_style_blue nav__badge" id="counter">{{ user.buyer.count }}</span></a></li>#}
+            {% endif %}
         </ul>
         {% if user.is_authenticated %}
-
+        <ul class="nav__items list">
+            <li class="nav__item"><a href="{% url 'password_change' %}" class="nav__link link">Изменить пароль</a></li>
+{#            <li class="nav__item"><a href="{% url 'logout' %}" class="nav__link link">Выход</a></li>#}
+        </ul>
         {% else %}
         <ul class="nav__items list">
             <li class="nav__item"><a href="{% url 'login' %}" class="nav__link link">Войти</a></li>
