--- a/templates/new_recipe.html
+++ b/templates/new_recipe.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% block title %}Создание рецепта{% endblock %}
 {% load static %}
 {% block styles %}
@@ -29,18 +29,20 @@
                 <p class="form__label">Теги</p>
                 <div class="form__field-group">
                     <div class="tags">
-                        {% for tag in tags %}
                         <div class="tags__item">
-                            <label for="id_{{ tag.name }}"></label><input type="checkbox" name="tag" value ="{{ tag.id }}" id="id_{{ tag.name }}" class="tags__checkbox tags__checkbox_style_{{ tag.color }}">
-                            <label for="id_{{ tag }}" class="tags__label">{{ tag }}</label>
+                            <input type="checkbox" name="breakfast" id="id_breakfast" class="tags__checkbox tags__checkbox_style_orange">
+                            <label for="id_breakfast" class="tags__label">Завтрак</label>
                         </div>
-                    {% endfor %}
+                        <div class="tags__item">
+                            <input type="checkbox" name="lunch" id="id_lunch" class="tags__checkbox tags__checkbox_style_green" checked>
+                            <label for="id_lunch" class="tags__label">Обед</label>
+                        </div>
+                        <div class="tags__item">
+                            <input type="checkbox" name="dinner" id="id_dinner" class="tags__checkbox tags__checkbox_style_purple" checked>
+                            <label for="id_dinner" class="tags__label">Ужин</label>
+                        </div>
                     </div>
-                    {% if form.errors %}
-                        {% for error in form.tag.errors %}
-                            <span class="form__error">{{ error|escape }}</span>
-                        {% endfor %}
-                    {% endif %}
+                    <span class="form__error"></span>
                 </div>
             </div>
             <div class="form__group">
@@ -58,17 +60,10 @@
 
                     </div>
                     <span class="form__ingredient-link" id="addIng">Добавить ингредиент</span>
-                    <span class="form__error">
-                    {% if form.non_field_errors %}
-                        <div class="non-field-errors">
-                            {% for error in form.non_field_errors %}
-                                <p class="form__error">{{ error|escape }}</p>
-                            {% endfor %}
-                        </div>
-                    {% endif %}
-                    </span>
+                    <span class="form__error"></span>
                 </div>
             </div>
+
            <div class="form__group">
                 <label for="id_time" class="form__label">Время приготовления</label>
                 <div class="form__field-group form__field-group_time">
@@ -108,7 +103,7 @@
 
             <div class="form__footer">
 
-                <button class="button button_style_blue">Сохранить рецепт</button>
+                <button class="button button_style_blue">Создать рецепт</button>
 
             </div>
         </form>
