--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -1,26 +1,23 @@
 {% extends "base.html" %}
-{% block title %} Создание рецепта {% endblock %}
+{% block title %}Редактирование рецепта{% endblock %}
 {% load static %}
-{% load cache %}
+{% block styles %}
+    <link rel="stylesheet" href="{% static 'pages/form.css' %}">
+{% endblock %}
 {% block content %}
-{% load user_filters %}
-<link rel="stylesheet" href="{% static 'pages/form.css' %}">
+{% csrf_token %}
 <main class="main container">
     <div class="main__header">
-        <h1 class="main__title">Создание рецепта</h1>
+        <h1 class="main__title">Редактирование рецепта</h1>
     </div>
     <div class="form-container">
-        <form class="form" method="post" enctype="multipart/form-data">
+        <form class="form" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="form__group">
                 <label for="id_name" class="form__label">Название рецепта</label>
                 <div class="form__field-group">
-                    {{ form.title|add_classes:"form__input" }}
-                    {% if form.errors %}
-                    {% for error in form.title.errors %}
-                        <span class="form__error">{{ error|escape }}</span>
-                    {% endfor %}
-                {% endif %}
+                    <input type="text" id="id_title" name="title" class="form__input" value="{{ recipe.title }}">
+                    <span class="form__error"></span>
                 </div>
             </div>
             <div class="form__group">
@@ -28,17 +25,14 @@
                 <div class="form__field-group">
                     <div class="tags">
                         {% for tag in tags %}
-                        <div class="tags__item">
-                            <input type="checkbox" name="tag" value ="{{ tag.id }}" id="id_{{ tag.name }}" class="tags__checkbox tags__checkbox_style_{{ tag.color }}">
-                            <label for="id_{{ tag.name }}" class="tags__label">{{ tag.name }}</label>
+                            <div class="tags__item">
+                                <input type="checkbox" name="tags" value="{{ tag.id }}" id="id_{{ tag.slug }}"
+                                       class="tags__checkbox tags__checkbox_style_{{ tag.style }}" {% if tag in recipe_tags %} checked {% endif %}>
+                            <label for="id_{{ tag.slug }}" class="tags__label">{{ tag.title }}</label>
                         </div>
-                    {% endfor %}
-                    </div>
-                    {% if form.errors %}
-                        {% for error in form.tag.errors %}
-                            <span class="form__error">{{ error|escape }}</span>
                         {% endfor %}
-                    {% endif %}
+                    </div>
+                    <span class="form__error">{{ form.tags.errors }}</span>
                 </div>
             </div>
             <div class="form__group">
@@ -52,74 +46,75 @@
                         <input type="number" id="cantidad" class="form__input" min="0">
                         <label for="cantidad" class="form__label" id="cantidadVal">шт.</label>
                     </div>
-                    <div class="form__field-group-ingredientes-container">
 
+                    <div class="form__field-group-ingredientes-container">
+                        {% for ingredient in recipe.ingredients.all %}
+                            <div class="form__field-item-ingredient"
+                                 id="{{ ingredient.id }}">
+                                <span> {{ ingredient }} {{ ingredient.ingredients.dimension }}</span>
+                                <span class="form__field-item-delete"></span>
+                                <input id="nameIngredient_{{ ingredient.id  }}" name="nameIngredient"
+                                       type="hidden"
+                                       value="{{item.ingredient.title}}">
+                                <input id="valueIngredient_{{ ingredient.id  }}" name="valueIngredient"
+                                       type="hidden"
+                                       value="{{item.amount}}">
+                                <input id="unitsIngredient{{ ingredient.id  }}" name="unitsIngredient"
+                                       type="hidden"
+                                       value="{{item.ingredient.dimension}}">
+                            </div>
+                        {% endfor %}
                     </div>
                     <span class="form__ingredient-link" id="addIng">Добавить ингредиент</span>
-                    <span class="form__error">
-                    {% if form.non_field_errors %}
-                        <div class="non-field-errors">
-                            {% for error in form.non_field_errors %}
-                                <p class="form__error">{{ error|escape }}</p>
-                            {% endfor %}
-                        </div>
-                    {% endif %}
-                    </span>
+                    <span class="form__error"></span>
                 </div>
             </div>
-           <div class="form__group">
+            <div class="form__group">
                 <label for="id_time" class="form__label">Время приготовления</label>
                 <div class="form__field-group form__field-group_time">
-                    {{ form.time|add_classes:"form__input" }}
+                    <input type="text" id="id_duration" name="duration" class="form__input" value="{{ recipe.duration }}">
                     <label for="id_time" class="form__label">минут</label>
-                    {% if form.errors %}
-                    {% for error in field.errors %}
-                        <span class="form__error">{{ error|escape }}</span>
-                    {% endfor %}
-                    {% endif %}
+                    <span class="form__error"></span>
                 </div>
             </div>
             <div class="form__group">
                 <label for="id_description" class="form__label">Описание</label>
                 <div class="form__field-group">
-                    {{ form.description|add_classes:"form__textarea" }}
-                    {% if form.errors %}
-                        {% for error in field.errors %}
-                            <span class="form__error">{{ error|escape }}</span>
-                        {% endfor %}
-                    {% endif %}
+                    <textarea name="description" id="id_description" rows="8" class="form__textarea">
+                        {{ recipe.description }}
+                    </textarea>
+                    <span class="form__error">{{ form.description.errors }}</span>
                 </div>
             </div>
             <div class="form__group">
                 <span class="form__label">Загрузить фото</span>
                 <div class="form__field-group">
-                    {{ form.image|add_classes:"form__file-button-image" }}
-                    {% if form.errors %}
-                        {% for error in field.errors %}
-                            <span class="form__error">{{ error|escape }}</span>
-                        {% endfor %}
-                    {% endif %}
-
+                    <label for="id_file" class="form__file-button">Выбрать файл</label>
+                    <input type="file" class="form__file" name="image" id="id_file" >
+                    <span class="form__error"></span>
                 </div>
             </div>
 
-
+            {% if recipe.image %}
+                <div class="form__group">
+                    <span class="form__label">Текущее</span>
+                    <div class="form__field-group">
+                        <img src="{{ recipe.image.url }}" alt="{{ recipe.title }}" style="width:100px;">
+                    </div>
+                </div>
+            {% endif %}
             <div class="form__footer">
-
-                <button class="button button_style_blue">Сохранить рецепт</button>
-
+                <button class="button button_style_blue">Сохранить</button>
             </div>
         </form>
     </div>
-
-
 </main>
-    {% block scripts %}
-    <script src="{% static 'js/config/config.js' %}"></script>
-    <script src="{% static 'js/components/Header.js' %}"></script>
-    <script src="{% static 'js/utils/debouncing.js' %}"></script>
-    <script src="{% static 'js/api/Api.js' %}"></script>
-    <script src="{% static 'formRecipe.js' %}"></script>
-    {% endblock %}
 
+    {% block scripts %}
+        <script src="{% static 'js/config/config.js' %}"></script>
+        <script src="{% static 'js/components/Header.js' %}"></script>
+        <script src="{% static 'js/utils/debouncing.js' %}"></script>
+        <script src="{% static 'js/api/Api.js' %}"></script>
+        <script src="{% static 'formRecipe.js' %}"></script>
+    {% endblock %}
 {% endblock %}
