--- a/templates/new_recipe.html
+++ b/templates/new_recipe.html
@@ -103,7 +103,7 @@
 
             <div class="form__footer">
 
-                <button class="button button_style_blue">Создать рецепт</button>
+                <button class="button button_style_blue">Сохранить рецепт</button>
 
             </div>
         </form>
