--- a/templates/includes/nav_auth.html
+++ b/templates/includes/nav_auth.html
@@ -11,6 +11,11 @@
         </ul>
 
         <ul class="nav__items list">
+            {% if user_type == admin %}
+                <li class="nav__item"><a href="/admin" class="nav__link link">Админка</a></li>
+            {% else %}
+                <li class="nav__item"><a href="{% url 'password_change' %}" class="nav__link link">error</a></li>
+            {% endif %}
             <li class="nav__item"><a href="{% url 'password_change' %}" class="nav__link link">Изменить пароль</a></li>
             <li class="nav__item"><a href="{% url 'logout' %}" class="nav__link link">Выход</a></li>
         </ul>
