--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -56,7 +56,7 @@
                     <h3 class="single-card__section-title">Ингридиенты:</h3>
                     <div class="single-card__items single-card__items_column">
                     {% for ingredient in recipe.ingredients.all %}
-                    <p class=" single-card__section-item">{{ ingredient }} {{ ingredient.ingredient_count.instance.ingredients.dimension }}
+                    <p class=" single-card__section-item">{{ ingredient}} {{ ingredient.ingredients.dimension }}
                     {% endfor %}
                     </div>
                 </div>
