--- a/templates/includes/nav_auth.html
+++ b/templates/includes/nav_auth.html
@@ -3,7 +3,7 @@
     <div class="nav__container container">
         <ul class="nav__items list">
             <li class="nav__item {% if request.resolver_match.url_name in 'index, recipe_view, author_recipes' %}nav__item_active {% endif %}"><a href="{% url 'index' %}" class="nav__link link">Рецепты</a></li>
-{#            <li class="nav__item {% if request.resolver_match.url_name == 'my_follows'  %}nav__item_active {% endif %} "><a href="{% url 'my_follows' request.user.username %}" class="nav__link link">Мои подписки</a></li>#}
+            <li class="nav__item "><a href="#" class="nav__link link">Мои подписки</a></li>
             <li class="nav__item {% if request.resolver_match.url_name == 'new_recipe' %}nav__item_active {% endif %}"><a href="{% url 'new_recipe' %}" class="nav__link link">Создать рецепт</a></li>
 {#            <li class="nav__item {% if request.resolver_match.url_name == 'favorite' %}nav__item_active {% endif %}" ><a href="{% url 'favorite' %}" class="nav__link link">Избранное</a></li>#}
             <li class="nav__item {% if request.resolver_match.url_name == 'shop_list' %}nav__item_active {% endif %}"><a href="{% url 'shop_list' %}" class="nav__link link">Список покупок</a><span class="badge badge_style_blue nav__badge" id="counter">{{ request|count_recipes }}</span></li>
@@ -11,13 +11,13 @@
         </ul>
 
         <ul class="nav__items list">
-            {% if user_type == admin %}
+            {% if user.is_superuser %}
                 <li class="nav__item"><a href="/admin" class="nav__link link">Админка</a></li>
-            {% else %}
-                <li class="nav__item"><a href="{% url 'password_change' %}" class="nav__link link">error</a></li>
             {% endif %}
             <li class="nav__item"><a href="{% url 'password_change' %}" class="nav__link link">Изменить пароль</a></li>
             <li class="nav__item"><a href="{% url 'logout' %}" class="nav__link link">Выход</a></li>
         </ul>
     </div>
 </nav>
+
+{#            <li class="nav__item {% if request.resolver_match.url_name == 'my_follows'  %}nav__item_active {% endif %} "><a href="{% url 'my_follows' request.user.username %}" class="nav__link link">Мои подписки</a></li>#}
