--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -23,7 +23,9 @@
                 </div>
 
                 <ul class="single-card__items">
-                    {% for tag in recipe.tag.all %}
+                    {% for tag in recipe.tags.all %}
+                        {{ tag }}
+
                         <li class="single-card__item"><span class="badge badge_style_{{ tag.color }}">{{ tag.name }}</span></li>
                     {% endfor %}
                 </ul>
@@ -37,7 +39,6 @@
                                 class="single-card__text"><span class="icon-user"></span>{{ recipe.author.get_full_name|default:recipe.author.username }}</p></li></a>
                         {% if recipe.author == request.user %}
                             <li class="single-card__item">  <a style="margin-left: 2.5em" href="{% url 'recipe_edit' recipe.id %}" class="single-card__text">Редактировать</a></li>
-{#                            <li class="single-card__item">  <a style="margin-left: 2.5em" href="{% url 'delete_recipe' recipe.id %}" class="single-card__text">Удалить</a></li>#}
                         {% endif %}
 
                     </ul>
