--- a/templates/new_recipe.html
+++ b/templates/new_recipe.html
@@ -27,23 +27,25 @@
             </div>
 
             <div class="form__group">
-                <p class="form__label">Теги</p>
-                <div class="form__field-group">
-                    <div class="tags">
-                        {% for tag in tags %}
-                        <div class="tags__item">
-                            <input type="checkbox" name="tag" value ="{{ tag.id }}" id="id_{{ tag.name }}" class="tags__checkbox tags__checkbox_style_{{ tag.color }}">
-                            <label for="id_{{ tag.name }}" class="tags__label">{{ tag.name }}</label>
-                        </div>
-                    {% endfor %}
+            <p class="form__label">Теги</p>
+            <div class="form__field-group">
+                <div class="tags">
+                    <div class="tags__item">
+                        <input type="checkbox" name="breakfast" id="id_breakfast" class="tags__checkbox tags__checkbox_style_orange">
+                        <label for="id_breakfast" class="tags__label">Завтрак</label>
                     </div>
-                    {% if form.errors %}
-                        {% for error in form.tag.errors %}
-                            <span class="form__error">{{ error|escape }}</span>
-                        {% endfor %}
-                    {% endif %}
+                    <div class="tags__item">
+                        <input type="checkbox" name="lunch" id="id_lunch" class="tags__checkbox tags__checkbox_style_green">
+                        <label for="id_lunch" class="tags__label">Обед</label>
+                    </div>
+                    <div class="tags__item">
+                        <input type="checkbox" name="dinner" id="id_dinner" class="tags__checkbox tags__checkbox_style_purple" >
+                        <label for="id_dinner" class="tags__label">Ужин</label>
+                    </div>
                 </div>
+                <span class="form__error"></span>
             </div>
+        </div>
 
             <div class="form__group">
                 <label for="nameIngredient" class="form__label">Ингредиенты</label>
